added first test, first swagger done
